shared components ui and logic

--- a/src/app/shared/card-empty/card-empty.component.html
+++ b/src/app/shared/card-empty/card-empty.component.html
@@ -1,1 +1,18 @@
-<p>card-empty works!</p>
+<div class="card min-h-[200px] flex justify-center items-center">
+    <div role="status" class="flex flex-col items-center justify-center gap-6">
+        <span>
+            <svg class="size-20 fill-primary">
+                <use xlink:href="#icon-star-empty"></use>
+            </svg>
+        </span>
+        <h1 class="text-2xl font-bold capitalize">Your wishlist is empty</h1>
+        <p>Wish list not develope</p>
+    </div>
+</div>
+
+<!--SVG Symbols-->
+<svg class="hidden">
+    <symbol id="icon-star-empty" viewBox="0 0 32 32">
+        <path d="M15.258 25.971l-5.771 3.17c-0.78 0.428-1.744 0.115-2.153-0.7-0.163-0.324-0.22-0.696-0.16-1.057l1.102-6.715c0.089-0.541-0.083-1.092-0.459-1.475l-4.669-4.756c-0.631-0.642-0.644-1.697-0.029-2.356 0.245-0.262 0.566-0.433 0.913-0.486l6.452-0.98c0.519-0.079 0.968-0.42 1.201-0.912l2.885-6.11c0.39-0.825 1.346-1.164 2.136-0.757 0.314 0.162 0.569 0.428 0.724 0.757l2.885 6.11c0.232 0.492 0.681 0.833 1.201 0.912l6.452 0.98c0.872 0.132 1.475 0.978 1.349 1.889-0.050 0.363-0.214 0.698-0.465 0.954l-4.669 4.756c-0.376 0.383-0.547 0.934-0.459 1.475l1.102 6.715c0.149 0.907-0.434 1.768-1.302 1.924-0.346 0.062-0.701 0.003-1.012-0.167l-5.771-3.17c-0.465-0.255-1.020-0.255-1.484 0zM13.974 23.634c1.264-0.695 2.788-0.695 4.052 0l3.828 2.103-0.761-4.635c-0.226-1.374 0.212-2.782 1.187-3.775l3.329-3.391-4.493-0.682c-1.407-0.214-2.604-1.123-3.212-2.409l-1.904-4.032-1.904 4.032c-0.608 1.286-1.805 2.196-3.212 2.409l-4.493 0.682 3.329 3.391c0.975 0.993 1.413 2.401 1.187 3.775l-0.761 4.635 3.828-2.103z"></path>
+        </symbol>
+</svg>
