--- a/src/app/shared/card-failure/card-failure.component.html
+++ b/src/app/shared/card-failure/card-failure.component.html
@@ -1,1 +1,18 @@
-<p>card-failure works!</p>
+<div class="card min-h-[200px] flex justify-center items-center">
+    <div role="status" class="flex flex-col items-center justify-center gap-6">
+        <span>
+            <svg class="size-20 fill-primary">
+                <use xlink:href="#icon-not-found"></use>
+            </svg>
+        </span>
+        <h1 class="text-2xl font-bold capitalize">Something went wrong, Please try again!</h1>
+        <button class="bg-primary text-white p-3 rounded-md min-w-[150px] transition-all duration-1000 hover:bg-black" (click)="refresh()">Refresh</button>
+    </div>
+</div>
+
+<!--SVG Symbols-->
+<svg class="hidden">
+    <symbol id="icon-not-found" viewBox="0 0 32 32">
+        <path d="M14.986 0.030c-0.102 0.012-0.45 0.048-0.772 0.080-3.746 0.374-7.52 2.306-10.072 5.158-2.822 3.154-4.256 7.068-4.124 11.238 0.23 7.202 5.18 13.3 12.202 15.036 4.118 1.018 8.646 0.292 12.234-1.96 3.58-2.25 6.086-5.716 7.088-9.808 0.344-1.402 0.424-2.116 0.424-3.774s-0.080-2.372-0.424-3.774c-1.584-6.47-6.912-11.23-13.542-12.098-0.568-0.074-2.634-0.14-3.014-0.098zM17.706 3.126c1.39 0.18 2.69 0.57 3.974 1.194 1.396 0.68 2.36 1.372 3.494 2.506s1.826 2.098 2.506 3.494c0.89 1.83 1.292 3.596 1.292 5.68 0 2.108-0.404 3.864-1.32 5.734-0.344 0.702-1.038 1.828-1.362 2.21l-0.11 0.13-18.254-18.254 0.13-0.11c0.382-0.324 1.508-1.018 2.21-1.362 2.344-1.148 4.844-1.558 7.44-1.222zM14.96 17.068l9.12 9.122-0.134 0.106c-0.478 0.38-1.532 1.028-2.212 1.36-1.256 0.614-2.552 1.016-3.974 1.232-0.848 0.13-2.672 0.13-3.52 0-3.896-0.592-7.184-2.718-9.254-5.986-0.428-0.674-0.988-1.85-1.268-2.664-0.782-2.26-0.912-4.762-0.378-7.168 0.358-1.602 1.196-3.43 2.192-4.776 0.14-0.19 0.266-0.346 0.282-0.346 0.014 0 4.13 4.104 9.146 9.12z"></path>
+        </symbol>
+</svg>
