--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="bg-primary text-white h-[100px] flex flex-col justify-center items-center">
+    <div class="container">
+        <p class="text-center">© All Copyright 2024 by <a routerLink="/home" class="underline font-bold cursor-pointer">Books Lib</a></p>
+    </div>
+</footer>
